--- a/src/contact.html
+++ b/src/contact.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
-    <body>
-        <div id="root"></div>
-    </body>
+<body>
+    <h1>Contact page</h1>
+</body>
 </html>
